--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Banner -->
  <!-- Banner con logo y botón -->
 <section class="text-white py-20 text-center">
-  <img src="portada.jpg" alt="Tu Cochera" class="mx-auto mb-6 h-90">
+  <img src="Portada.jpg" alt="Tu Cochera" class="mx-auto mb-6 h-90">
   <a href="#autos" class="mt-4 inline-block bg-white text-blue-600 font-semibold px-8 py-3 rounded-full shadow-lg hover:bg-gray-100 transition">Encontrá tu auto</a>
 </section>
 
@@ -58,7 +58,7 @@
   <section class="p-8">
     <h3 class="text-2xl font-semibold mb-4">Publicidad de agencias</h3>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <img src="veneranda.jpg" class="rounded shadow" alt="Publicidad 1">
+      <img src="Veneranda.jpg" class="rounded shadow" alt="Publicidad 1">
       <img src="motcor.jpg" class="rounded shadow" alt="Publicidad 2">
     </div>
   </section>
