--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h3 class="text-2xl font-bold text-center mb-8">Autos Destacados</h3>
     <div class="grid md:grid-cols-3 gap-6">
       <!-- Auto 1 -->
-      <a href="auto1.html" class="bg-white rounded-lg shadow-md hover:shadow-lg overflow-hidden">
+      <a href="auto1.html" class="bg-white rounded-lg shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 overflow-hidden">
         <img src="IMG-20250522-WA0036.jpg" alt="Auto 1" class="w-full h-48 object-cover">
         <div class="p-4">
           <h4 class="font-semibold text-lg">Fiat Strada Working D/C 2013</h4>
@@ -45,7 +45,7 @@
         </div>
       </a>
       <!-- Auto 2 -->
-      <a href="auto2.html" class="bg-white rounded-lg shadow-md hover:shadow-lg overflow-hidden">
+      <a href="auto2.html" class="bg-white rounded-lg shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 overflow-hidden">
         <img src="IMG-20250523-WA0020.jpg" alt="Auto 2" class="w-full h-48 object-cover">
         <div class="p-4">
           <h4 class="font-semibold text-lg">Peugeot 208 Allure Plus 2021</h4>
@@ -53,7 +53,7 @@
         </div>
       </a>
       <!-- Auto 3 -->
-      <a href="auto3.html" class="bg-white rounded-lg shadow-md hover:shadow-lg overflow-hidden">
+      <a href="auto3.html" class="bg-white rounded-lg shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 overflow-hidden">
         <img src="IMG-20250317-WA0042.jpg" alt="Auto 3" class="w-full h-48 object-cover">
         <div class="p-4">
           <h4 class="font-semibold text-lg">VW Nivus 2021</h4>
@@ -62,7 +62,7 @@
       </a>
     </div>
     <div class="text-center mt-8">
-      <a href="autos.html" class="bg-gray-800 hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-lg shadow-md">
+      <a href="autos.html" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md">
         Ver más autos
       </a>
     </div>
@@ -102,7 +102,7 @@
         <a href="contacto.html" class="bg-gray-800 hover:bg-gray-900 text-white py-3 px-6 rounded-lg shadow-md">
           Ir a Contacto
         </a>
-        <a href="https://wa.me/5491112345678" target="_blank" class="bg-green-600 hover:bg-green-700 text-white py-3 px-6 rounded-lg shadow-md">
+        <a href="https://wa.me/5493534404779" target="_blank" class="bg-green-600 hover:bg-green-700 text-white py-3 px-6 rounded-lg shadow-md">
           WhatsApp
         </a>
       </div>
