--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a href="auto3.html" class="bg-white rounded-lg shadow-md hover:shadow-xl transform hover:scale-105 transition duration-300 overflow-hidden">
         <img src="IMG-20250317-WA0042.jpg" alt="Auto 3" class="w-full h-48 object-cover">
         <div class="p-4">
-          <h4 class="font-semibold text-lg">VW Nivus 2021</h4>
+          <h4 class="font-semibold text-lg">VW Taos 2021</h4>
           <p class="text-gray-600">$26.500.000</p>
         </div>
       </a>
