--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="text-2xl font-bold text-red-600">Tu Cochera</h1>
       <nav class="space-x-6">
         <a href="autos.html" class="text-gray-700 hover:text-red-600">Autos</a>
-        <a href="creditos.html" class="text-gray-700 hover:text-red-600">Créditos</a>
+        <a href="https://chatbotevolution.com/naimayer/" class="text-gray-700 hover:text-red-600">Créditos</a>
         <a href="contacto.html" class="text-gray-700 hover:text-red-600">Contactos</a>
       </nav>
     </div>
@@ -76,7 +76,7 @@
         Te ofrecemos planes de financiación flexibles y adaptados a tus necesidades.
         Comprá hoy tu auto y pagalo en cómodas cuotas.
       </p>
-      <a href="creditos.html" class="bg-red-600 hover:bg-red-700 text-white py-3 px-6 rounded-lg shadow-md">
+      <a href="https://chatbotevolution.com/naimayer/" class="bg-red-600 hover:bg-red-700 text-white py-3 px-6 rounded-lg shadow-md">
         Más información
       </a>
     </div>
