--- a/autos.html
+++ b/autos.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo de Autos</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tu Cochera - Venta de Autos</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<body class="font-sans bg-gray-50 text-gray-800">
+
+  <!-- Navbar -->
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <div class="container mx-auto flex justify-between items-center py-4 px-6">
+      <h1 class="text-2xl font-bold text-red-600">Tu Cochera</h1>
+      <nav class="space-x-6">
+        <a href="autos.html" class="text-gray-700 hover:text-red-600">Autos</a>
+        <a href="creditos.html" class="text-gray-700 hover:text-red-600">Créditos</a>
+        <a href="contacto.html" class="text-gray-700 hover:text-red-600">Contactos</a>
+      </nav>
+    </div>
+  </header>
+
 <body class="bg-gray-100 p-6">
 
   <!-- Filtros por marca -->
-  <h2 class="text-2xl font-bold mb-4">Filtrar por marca</h2>
+  <h2 class="text-2xl font-bold mb-4">Elegi tu marca</h2>
   <div class="grid grid-cols-3 sm:grid-cols-6 gap-4 mb-8">
     <button class="brand-btn bg-white p-3 rounded-xl shadow-xl transform hover:scale-105 transition duration-300 overflow-hidden" data-brand="chevrolet">
       <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Chevrolet-logo.png" alt="Chevrolet" class="mx-auto h-8 mb-2">
