--- a/autos.html
+++ b/autos.html
@@ -14,7 +14,7 @@
       <h1 class="text-2xl font-bold text-red-600">Tu Cochera</h1>
       <nav class="space-x-6">
         <a href="autos.html" class="text-gray-700 hover:text-red-600">Autos</a>
-        <a href="creditos.html" class="text-gray-700 hover:text-red-600">Créditos</a>
+        <a href="Creditos.html" class="text-gray-700 hover:text-red-600">Créditos</a>
         <a href="contacto.html" class="text-gray-700 hover:text-red-600">Contactos</a>
       </nav>
     </div>
