--- a/autos.html
+++ b/autos.html
@@ -78,13 +78,13 @@
   <h2 class="text-2xl font-bold mb-4">Autos Destacados</h2>
   <div id="autos-grid" class="grid grid-cols-1 sm:grid-cols-3 gap-6">
     <!-- Destacado 1 -->
-    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="chevrolet">
+    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="fiat">
       <img src="IMG-20250522-WA0036.jpg" alt="Strada" class="w-full h-40 object-cover rounded-lg mb-2">
       <h3 class="font-bold text-lg">Fiat Strada Working D/C</h3>
       <p class="text-gray-600">2013 · $14.500.000</p>
     </div>
     <!-- Destacado 2 -->
-    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="chevrolet">
+    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="renault">
       <img src="IMG-20250903-WA0015.jpg" alt="Sandero" class="w-full h-40 object-cover rounded-lg mb-2">
       <h3 class="font-bold text-lg">Renault Sandero</h3>
       <p class="text-gray-600">2017 · $19.500.000</p>
@@ -96,7 +96,7 @@
       <p class="text-gray-600">2021 · $26.500.000</p>
     </div>
     <!-- Destacado 4 -->
-    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="ford">
+    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="peugeot">
       <img src="IMG-20250523-WA0020.jpg" alt="208" class="w-full h-40 object-cover rounded-lg mb-2">
       <h3 class="font-bold text-lg">Peugeot 208 Allure Plus</h3>
       <p class="text-gray-600">2021 · $23.000.000</p>
@@ -108,7 +108,7 @@
       <p class="text-gray-600">2011 · $9.500.000</p>
     </div>
     <!-- Destacado 6 -->
-    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="otras">
+    <div class="auto-card bg-white p-4 rounded-xl shadow" data-brand="fiat">
       <img src="IMG-20250810-WA0002.jpg" alt="Cronos" class="w-full h-40 object-cover rounded-lg mb-2">
       <h3 class="font-bold text-lg">Fiat Cronos</h3>
       <p class="text-gray-600">2021 · $19.000.000</p>
@@ -135,5 +135,11 @@
     });
   </script>
 
+
+  <!-- Footer -->
+  <footer id="contacto" class="bg-gray-800 text-white p-6 text-center">
+    <p>&copy; 2025 Tu cochera - Todos los derechos reservados</p>
+    <p>Contacto: <a href="https://wa.me/5491123456789" target="_blank" class="underline">WhatsApp</a></p>
+  </footer>
 </body>
 </html>
