--- a/autos.html
+++ b/autos.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <h1 class="text-2xl font-bold text-red-600">Tu Cochera</h1>
+    <a href="index.html" class="text-2xl font-bold text-red-600">Tu Cochera</h1>  
       <nav class="space-x-6">
         <a href="autos.html" class="text-gray-700 hover:text-red-600">Autos</a>
         <a href="Creditos.html" class="text-gray-700 hover:text-red-600">Créditos</a>
